--- a/main.html
+++ b/main.html
@@ -4,11 +4,12 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Time and Space Complexity</title>
 </head>
 
 <body>
-	<p><h1>Time and Space Complexity</h1>
-		<hr>
+	<h1>Time and Space Complexity</h1>
+	<p>	<hr>
 	Time complexity is understood as the time taken by a program to run and complete the given task. For example, if a program takes 100 seconds to run while another program completes the same task in 200 seconds, then clearly the first program has low time complexity. Therefore, as a programmer, your goal is to reduce the time complexity of the code by optimizing it and making it more efficient.
 	</p>
 	
